--- a/view.ui
+++ b/view.ui
@@ -33,7 +33,7 @@
          <bool>true</bool>
         </property>
         <property name="text">
-         <string>Reprendre</string>
+         <string>Resume</string>
         </property>
        </widget>
       </item>
@@ -46,7 +46,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Jouer</string>
+         <string>Play</string>
         </property>
        </widget>
       </item>
